# cowtop

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
csrc/: cow_disk.c  cow_disk.h  cow_net.c  cow_net.h  cowsys.c  cowsys.h  proc_reader.c  proc_reader.h
include/: proc_reader.h
src/: app.rs  cow.rs  ffi.rs  lib.rs  main.c  main.rs  proc_reader.c  sys.rs  ui.rs
src/ui/: cpu.rs  mod.rs  network.rs  overview.rs  processes.rs  sensors.rs  storage.rs  theme.rs  widgets.rs
tests/: render.rs
tests/fixtures/proc/: meminfo  stat
tests/fixtures/proc/100/: stat  status
tests/fixtures/proc/200/: stat  status
tests/fixtures/proc/300/: stat
